# earthquake-synthesis

./: README.md  diagnose_and_copy.py  manifest.json  pipeline.sh  plan_manifest.json  pyproject.toml
earthquake_synthesis_clean_out/: Real_Time_Earthquake_Monitoring_API.ipynb  Ultimate_Behavioral_Model.ipynb
scripts/: build_manifest.py
src/earthquake_synthesis/: __init__.py
src/earthquake_synthesis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/earthquake_synthesis/api/: app.py
